--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,9 @@ org.gradle.jvmargs=-Xmx1G
 	minecraft_version=1.17.1
 	yarn_mappings=1.17.1+build.14
 	loader_version=0.11.6
+	fabric_version=0.37.0+1.17
 
 # Mod Properties
-	mod_version = 1.0.6
+	mod_version = 1.0.7-4
 	maven_group =  tf.ssf.sfort
 	archives_base_name = fscript
