--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
-	id 'fabric-loom' version '0.8-SNAPSHOT'
+	id 'fabric-loom' version '0.9-SNAPSHOT'
+	id 'maven-publish'
 }
 
 sourceCompatibility = JavaVersion.VERSION_16
@@ -33,5 +34,17 @@ java {
 jar {
 	from("LICENSE") {
 		rename { "${it}_${project.archivesBaseName}"}
+	}
+}
+publishing {
+	publications {
+		gpr(MavenPublication) {
+			from(components.java)
+		}
+	}
+	repositories {
+		maven {
+			url "file://${System.getProperty("user.dir")}/publish"
+		}
 	}
 }
