--- a/fscript-shell/build.gradle
+++ b/fscript-shell/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 group 'tf.ssf.sfort'
@@ -21,4 +22,17 @@ dependencies {
 
 tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
+}
+
+publishing {
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
+    repositories {
+        maven {
+            url "file://${System.getProperty("user.dir")}/publish"
+        }
+    }
 }
